--- a/config.toml
+++ b/config.toml
@@ -2,5 +2,29 @@ baseURL = 'https://leetnodes.ry.rs/'
 languageCode = 'zh-CN'
 title = "Zijing's Leetcode Notes"
 theme = "hugo-book"
+enableGitInfo = true
+
 [markup.goldmark.renderer]
 unsafe= true
+
+[params]
+  BookTheme = 'auto'
+  # (Optional, default docs) Specify section of content to render as menu
+  # You can also set value to "*" to render all sections to menu
+  BookSection = 'docs'
+
+  # Set source repository location.
+  # Used for 'Last Modified' and 'Edit this page' links.
+  BookRepo = 'https://github.com/pluveto/leetnotes'
+
+  # Specifies commit portion of the link to the page's last modified commit hash for 'doc' page
+  # type.
+  # Required if 'BookRepo' param is set.
+  # Value used to construct a URL consisting of BookRepo/BookCommitPath/<commit-hash>
+  # Github uses 'commit', Bitbucket uses 'commits'
+  BookCommitPath = 'commit'
+
+  # Enable 'Edit this page' links for 'doc' page type.
+  # Disabled by default. Uncomment to enable. Requires 'BookRepo' param.
+  # Path must point to the site directory.
+  BookEditPath = 'edit/main'
