feat: create '1. \344\270\244\346\225\260\344\271\213\345\222\214.md"' and '15. \344\270\211\346\225\260\344\271\213\345\222\214.md"'

--- a/config.toml
+++ b/config.toml
@@ -17,7 +17,7 @@ enableGitInfo = true
 [[menu.after]]
   name = "Github"
   url = "https://github.com/pluveto/leetnotes"
-  pre = '<hr style="border: 0; border-bottom: 1px solid #eee" /><img src="github.svg" width=16 />'
+  pre = '<hr style="border: 0; border-bottom: 1px solid #eee" /><img src="/github.svg" width=16 />'
   weight = 10
 
 [params]
